# walker-engine-rs

./: Cargo.toml  compile-shaders.bat  download_assets.py
shaders/spv/: shader-depth-vert.spv
shaders/src/: shader-base.frag  shader-depth.frag
src/: main.rs
src/utility/: camera.rs  constants.rs  debug.rs  mod.rs  platforms.rs  window.rs
src/utility/share/: mod.rs  v1.rs
