[package]
name = "walker_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit     = "0.29.15"
ash       = "0.29.0"
num       = "0.2"
cgmath    = "0.17.0"
image     = "0.25.5"
memoffset = "0.5.1"
tobj      = "0.1.10"
winit_input_helper = "0.16.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
